early localization effort, some improvements

--- a/PDFSlider/App.xaml
+++ b/PDFSlider/App.xaml
@@ -1,9 +1,12 @@
 ﻿<Application x:Class="PDFSlider.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PDFSlider"
              Startup="AppStart">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources\EnglishLang.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
