--- a/PDFSlider/Views/OptionsWindow.xaml
+++ b/PDFSlider/Views/OptionsWindow.xaml
@@ -6,11 +6,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:l="clr-namespace:PDFSlider.ViewModels"
         mc:Ignorable="d"
-        Title="Wybierz katalog z plikami .PDF" Height="420" Width="560" ResizeMode="NoResize">
+        Title="{DynamicResource ctrlTitleText}" Height="420" Width="560" ResizeMode="NoResize">
     <Window.DataContext>
         <l:OptionsWindowViewModel/>
     </Window.DataContext>
-    <Grid>
+    <Grid Width="{Binding ActualWidth, ElementName=OptionsWnd}" Height="{Binding ActualHeight, ElementName=OptionsWnd}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="2*" />
@@ -19,18 +19,17 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="1*" />
             <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
             <RowDefinition Height="0.5*" />
-            <RowDefinition Height="0.2*" />
+            <RowDefinition Height="0.5*" />
         </Grid.RowDefinitions>
         <Image Grid.Column="2" HorizontalAlignment="Left" Height="78" VerticalAlignment="Top" Width="138" Source="/PDFSlider;component/Resources/JSWITS.png" RenderTransformOrigin="0.66,0.772"/>
         <Image Grid.Column="0" HorizontalAlignment="Left" Height="78" VerticalAlignment="Top" Width="138" Source="/PDFSlider;component/Resources/JSW.png"/>
-        <Label Grid.Column="1" Grid.Row="2" Content="Ścieżka katalogu z plikami .PDF:" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBox Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" Height="20" Text="{Binding PdfDirectoryPath, Mode=TwoWay}" TextWrapping="Wrap" VerticalAlignment="Top" Width="208" Margin="2,20,0,0"/>
-        <Button Grid.Column="1" Grid.Row="2" Content="Wybierz" Command="{Binding ChooseDirCommand, Mode=OneTime}" HorizontalAlignment="Right" VerticalAlignment="Top" Width="62" Margin="0,20,0,0" />
-        <Label Grid.Column="1" Grid.Row="2" Content="Czas wyświetlania slajdu:" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBox Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" Height="20" Text="{Binding SecondsBetweenSlides, Mode=TwoWay}" VerticalAlignment="Center" Width="208" Margin="2,63,0,23"/>
-        <Button Grid.Column="1" Grid.Row="3" HorizontalAlignment="Stretch" Content="OK" Command="{Binding OKCommand, Mode=OneTime}" CommandParameter="{Binding ElementName=OptionsWnd}" VerticalAlignment="Center" Width="75" Background="#FF919191"/>
+        <Label Grid.Column="1" Grid.Row="1" Content="{DynamicResource lblDirPathText}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <TextBox Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Height="20" Text="{Binding PdfDirectoryPath, Mode=TwoWay}" TextWrapping="Wrap" VerticalAlignment="Top" Width="208" Margin="2,20,0,0"/>
+        <Button Grid.Column="1" Grid.Row="1" Content="{DynamicResource btnChooseDirText}" Command="{Binding ChooseDirCommand, Mode=OneTime}" HorizontalAlignment="Right" VerticalAlignment="Top" Width="62" Margin="0,20,0,0" />
+        <Label Grid.Column="1" Grid.Row="1" Content="{DynamicResource lblShowTimeText}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBox Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Height="20" Text="{Binding SecondsBetweenSlides, Mode=TwoWay}" VerticalAlignment="Center" Width="208" Margin="2,63,0,23"/>
+        <Button Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Center" Content="OK" Command="{Binding OKCommand, Mode=OneTime}" CommandParameter="{Binding ElementName=OptionsWnd}" Width="75" Background="#FF919191" Height="30"/>
 
     </Grid>
 </Window>
