--- a/PDFSlider/Controls/PdfViewer.xaml
+++ b/PDFSlider/Controls/PdfViewer.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
   <ScrollViewer PanningMode="Both"
-                Background="Black">
+                Background="White" VerticalScrollBarVisibility="Hidden">
     <ItemsControl x:Name="PagesContainer"/>
   </ScrollViewer>
 </UserControl>
