--- a/PDFSlider/Resources/EnglishLang.xaml
+++ b/PDFSlider/Resources/EnglishLang.xaml
@@ -4,5 +4,5 @@
     <s:String x:Key="ctrlTitleText">Options window</s:String>
     <s:String x:Key="lblDirPathText">Directory path:</s:String>
     <s:String x:Key="lblShowTimeText">File change interval:</s:String>
-    <s:String x:Key="btnChooseDirText">Choose:</s:String>
+    <s:String x:Key="btnChooseDirText">Choose</s:String>
 </ResourceDictionary>
